# autonomous-trader

./: .gitignore  autonomous-trader.ipynb  main.py  pyproject.toml
