[project]
name = "autonomous-trader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agent-framework-openai>=1.10.1",
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "ipython>=9.15.0",
    "massive>=2.8.0",
    "openai>=2.45.0",
    "openai-agents>=0.18.2",
    "pydantic>=2.13.4",
]
